@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2025 Obeo.
+ * Copyright (c) 2025, 2026 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -16,6 +16,7 @@ import java.util.Objects;
 
 import org.eclipse.syson.sysml.Element;
 import org.eclipse.syson.sysml.FeatureReferenceExpression;
+import org.eclipse.syson.sysml.Membership;
 import org.eclipse.syson.sysml.OperatorExpression;
 import org.eclipse.syson.sysml.helper.EMFUtils;
 import org.eclipse.syson.sysml.textual.utils.INameDeresolver;
@@ -47,7 +48,8 @@ public class SimpleNameDeresolver implements INameDeresolver {
 
     private boolean preferUsingShortName(Element element, Element context) {
         // Check if the reference if used as a unit
-        if (context instanceof FeatureReferenceExpression featureRef) {
+        FeatureReferenceExpression featureRef = this.getOwningFeatureReferenceExpression(context);
+        if (featureRef != null) {
             return EMFUtils.getAncestors(OperatorExpression.class, featureRef,
                     ancestor -> ancestor instanceof OperatorExpression operatorExpression && Objects.equals(operatorExpression.getOperator(), "[")).size() > 0;
         }
@@ -55,4 +57,16 @@ public class SimpleNameDeresolver implements INameDeresolver {
         return false;
     }
 
+
+    private FeatureReferenceExpression getOwningFeatureReferenceExpression(Element context) {
+        final FeatureReferenceExpression result;
+        if (context instanceof FeatureReferenceExpression featureRef) {
+            result = featureRef;
+        } else if (context instanceof Membership membership && membership.getMembershipOwningNamespace() instanceof FeatureReferenceExpression featureRef) {
+            result = featureRef;
+        } else {
+            result = null;
+        }
+        return result;
+    }
 }
